Implemented DELETE /connections/<connection_id>
