# swagger.yaml
@@ -117,6 +117,25 @@ paths:
           description: "Invalid input"
         404:
           description: "Connection does not exist"
+    delete:
+      summary: "Delete an existing connection"
+      description: ""
+      operationId: "deleteConnection"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        name: "connection_id"
+        description: "The connection object that needs to be deleted"
+        required: true
+        type: integer
+      responses:
+        204:
+          description: "Connection deleted"
+        400:
+          description: "Invalid input"
 definitions:
   NewPerson:
     type: "object"
